knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__SWOT_Analysis__c/pqcrush__SWOT_Analysis__c.object-meta.xml
<CustomObject>
    <label>SWOT Analysis</label>
    <nameField>
        <label>SWOT Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SWOT Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>