knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__SWOT_Analysis__c/fields/pqcrush__Description__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>