knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__SWOT_Analysis__c/fields/pqcrush__Description_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Description_Rich_Text__c</fullName>
    <label>Description (Rich Text)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>