knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__SWOT_Analysis__c/recordTypes/pqcrush__Opportunity.recordType-meta.xml
<RecordType>
    <fullName>pqcrush__Opportunity</fullName>
    <active>true</active>
    <label>Opportunities</label>
</RecordType>