knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__SWOT_Analysis__c/recordTypes/pqcrush__Strength.recordType-meta.xml
<RecordType>
    <fullName>pqcrush__Strength</fullName>
    <active>true</active>
    <label>Strengths</label>
</RecordType>