knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__SWOT_Analysis__c/recordTypes/pqcrush__Threat.recordType-meta.xml
<RecordType>
    <fullName>pqcrush__Threat</fullName>
    <active>true</active>
    <label>Threats</label>
</RecordType>