knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__SWOT_Analysis__c/recordTypes/pqcrush__Weakness.recordType-meta.xml
<RecordType>
    <fullName>pqcrush__Weakness</fullName>
    <active>true</active>
    <label>Weaknesses</label>
</RecordType>